--- a/UIs/ui_component_editor.ui
+++ b/UIs/ui_component_editor.ui
@@ -75,13 +75,6 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="1">
-          <widget class="QComboBox" name="uiType">
-           <property name="editable">
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
          <item row="2" column="0">
           <widget class="QLabel" name="uiManufactureLabel">
            <property name="minimumSize">
@@ -127,6 +120,9 @@
             <bool>false</bool>
            </property>
           </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QLineEdit" name="uiType"/>
          </item>
         </layout>
        </item>
