--- a/UIs/ui_components_page.ui
+++ b/UIs/ui_components_page.ui
@@ -137,13 +137,6 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
-         <widget class="QComboBox" name="uiType">
-          <property name="editable">
-           <bool>false</bool>
-          </property>
-         </widget>
-        </item>
         <item row="2" column="0">
          <widget class="QLabel" name="uiManufactureLabel">
           <property name="minimumSize">
@@ -189,6 +182,9 @@
            <bool>false</bool>
           </property>
          </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLineEdit" name="uiType"/>
         </item>
        </layout>
       </item>
