--- a/UIs/ui_hardware_editor_page.ui
+++ b/UIs/ui_hardware_editor_page.ui
@@ -119,13 +119,6 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
-         <widget class="QComboBox" name="uiNewType">
-          <property name="editable">
-           <bool>false</bool>
-          </property>
-         </widget>
-        </item>
         <item row="2" column="0">
          <widget class="QLabel" name="uiNewManufactureLabel">
           <property name="minimumSize">
@@ -171,6 +164,9 @@
            <bool>false</bool>
           </property>
          </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLineEdit" name="uiNewType"/>
         </item>
        </layout>
       </item>
@@ -562,13 +558,6 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
-         <widget class="QComboBox" name="uiCurrentType">
-          <property name="editable">
-           <bool>false</bool>
-          </property>
-         </widget>
-        </item>
         <item row="2" column="0">
          <widget class="QLabel" name="uiCurrentManufactureLabel">
           <property name="minimumSize">
@@ -614,6 +603,9 @@
            <bool>false</bool>
           </property>
          </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLineEdit" name="uiCurrentType"/>
         </item>
        </layout>
       </item>
