fixed search entry filtering and moved stringAtRow in ProxyHardware

--- a/UIs/ui_components_page.ui
+++ b/UIs/ui_components_page.ui
@@ -184,7 +184,11 @@
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="QLineEdit" name="uiType"/>
+         <widget class="QLineEdit" name="uiType">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
