--- a/UIs/ui_hardware_editor_page.ui
+++ b/UIs/ui_hardware_editor_page.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>1620</width>
-    <height>712</height>
+    <height>760</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -166,7 +166,11 @@
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="QLineEdit" name="uiNewType"/>
+         <widget class="QLineEdit" name="uiNewType">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -348,6 +352,9 @@
         <property name="checkable">
          <bool>true</bool>
         </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
         <property name="autoExclusive">
          <bool>true</bool>
         </property>
@@ -476,9 +483,6 @@
        <property name="selectionBehavior">
         <enum>QAbstractItemView::SelectItems</enum>
        </property>
-       <property name="sortingEnabled">
-        <bool>false</bool>
-       </property>
       </widget>
      </item>
     </layout>
@@ -605,7 +609,11 @@
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="QLineEdit" name="uiCurrentType"/>
+         <widget class="QLineEdit" name="uiCurrentType">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
