--- a/UIs/ui_components_page.ui
+++ b/UIs/ui_components_page.ui
@@ -94,10 +94,14 @@
        <number>0</number>
       </property>
       <item>
-       <widget class="QLineEdit" name="uiNumberID"/>
+       <widget class="QLineEdit" name="uiNumberID">
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
       <item>
-       <widget class="QWidget" name="" native="true">
+       <widget class="QWidget" name="widget" native="true">
         <layout class="QFormLayout" name="formLayout">
          <property name="horizontalSpacing">
           <number>5</number>
