--- a/UIs/ui_bill_page.ui
+++ b/UIs/ui_bill_page.ui
@@ -15,15 +15,12 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
-    <widget class="QTableView" name="uiBillView">
+    <widget class="QTreeView" name="uiBillView">
      <property name="minimumSize">
       <size>
        <width>1000</width>
        <height>700</height>
       </size>
-     </property>
-     <property name="sortingEnabled">
-      <bool>false</bool>
      </property>
     </widget>
    </item>
